--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="SOUTH CONNEXION | Marseille Techno">
 <meta property="og:description" content="Découvrez la south connexione et ses prochains événements">
-<meta property="og:image" content="YOUR_IMAGE_URL_HERE">
+<meta property="og:image" content="https://raw.githubusercontent.com/garbieldpnt/south/main/og-image.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
 <meta property="twitter:url" content="https://blakkout.site">
 <meta name="twitter:title" content="SOUTH CONNEXION | Marseille Techno">
 <meta name="twitter:description" content="Découvrez la south connexione et ses prochains événements">
-<meta name="twitter:image" content="YOUR_IMAGE_URL_HERE">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/garbieldpnt/south/main/og-image.jpg">
 
 
     <meta name="keywords" content="Techno, South France, Rave, Underground, Collective">
